added showPassword function

--- a/hangman.html
+++ b/hangman.html
@@ -11,7 +11,7 @@
 	
 	<main>
 	
-		<div class="board">Cześć!</div>
+		<div class="board"></div>
 		<div class="hangman">
 			<img src="img/s0.jpg" alt="hangman"/>
 		</div>
