added letters to alphabet

--- a/hangman.html
+++ b/hangman.html
@@ -15,8 +15,54 @@
 		<div class="hangman">
 			<img src="img/s0.jpg" alt="hangman"/>
 		</div>
-		<div class="alphabet"></div>
-		<div style="clear:both"></div>
+		<div class="alphabet">
+			<div class="row">
+				<button class="letter">A</button>
+				<button class="letter">Ą</button>
+				<button class="letter">B</button>
+				<button class="letter">C</button>
+				<button class="letter">Ć</button>
+				<button class="letter">D</button>
+				<button class="letter">E</button>
+			</div>
+			<div class="row">
+				<button class="letter">Ę</button>
+				<button class="letter">F</button>
+				<button class="letter">G</button>
+				<button class="letter">H</button>
+				<button class="letter">I</button>
+				<button class="letter">J</button>
+				<button class="letter">K</button>
+			</div>
+			<div class="row">
+				<button class="letter">L</button>
+				<button class="letter">Ł</button>
+				<button class="letter">M</button>
+				<button class="letter">N</button>
+				<button class="letter">Ń</button>
+				<button class="letter">O</button>
+				<button class="letter">Ó</button>
+			</div>
+			<div class="row">
+				<button class="letter">P</button>
+				<button class="letter">Q</button>
+				<button class="letter">R</button>
+				<button class="letter">S</button>
+				<button class="letter">Ś</button>
+				<button class="letter">T</button>
+				<button class="letter">U</button>
+			</div>
+			<div class="row">
+				<button class="letter">V</button>
+				<button class="letter">W</button>
+				<button class="letter">X</button>
+				<button class="letter">Y</button>
+				<button class="letter">Z</button>
+				<button class="letter">Ż</button>
+				<button class="letter">Ź</button>
+			</div>
+		</div>
+		<div style="clear: both"></div>
 
 	</main>
 	
