added asking name window

--- a/hangman.html
+++ b/hangman.html
@@ -10,7 +10,12 @@
 <body>
 	
 	<main>
-	
+		
+		<div class="window-name">
+			Podaj swoje imię:<br>
+			<input class="input-name" type="text" placeholder="Janusz"><br>
+			<button class="input-name play">GRAJ</button>
+		</div>
 		<div class="board"></div>
 		<div class="hangman">
 			<img src="img/s0.jpg" alt="hangman"/>
