--- a/hangman.html
+++ b/hangman.html
@@ -13,7 +13,7 @@
 		
 		<div class="window-name">
 			Podaj swoje imię:<br>
-			<input class="input-name" type="text" placeholder="Janusz"><br>
+			<input class="input-name" type="text" placeholder="Imię"><br>
 			<button class="input-name play">GRAJ</button>
 		</div>
 		<div class="board"></div>
